<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="link_app">Поделиться приложением</string>
    <string name="link_support">Написать в поддержку</string>
    <string name="documentation">Пользовательское соглашение</string>
    <string name="subject_to_write_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail">gorpishin97@yandex.ru</string>
    <string name="text_for_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="android_developerYP_page">https://practicum.yandex.ru/android-developer/</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="tracks_not_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="emptyText">"Введите название мелодии для поиска"</string>
    <string name="you_searched_it">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="release_year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="playerTime">00:30</string>
    <string name="you_library_is_empty">Ваша медиатека пуста</string>
    <string name="playlist_is_empty">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist_button">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="name">Название*</string>
    <string name="playlistExitDialogTitle">Завершить создание плейлиста?</string>
    <string name="playlistExitDialogDescription">Все несохраненные данные будут потеряны</string>
    <string name="complete">Завершить</string>
    <string name="cancellation">Отмена</string>
    <string name="settingsPermissionDialogTitle">Откройте доступ к галерее</string>
    <string name="settingsPermissionDialogDescription">Для возможности загрузки изображения необходимо предоставить права доступа в настройках</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="dialog_playlist_delete_confirmation">Хотите удалить плейлист?</string>
    <plurals name="tracks_count">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes_count">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="minutes">минут</string>
    <string name="zero_minutes">0 минут</string>
    <string name="tracks">треков</string>
    <string name="deleteTrackDialogTitle">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="change">Сохранить</string>
    <string name="editor">Редактор</string>
    <string name="empty_title">Описание отсутствует.</string>
    <string name="empty_trackList">Вы не добавили ни одного\nтрека в плейлист</string>
    <string name="thanks_to_devs">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="yandex_ru_legal_practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="yandex_ru_android_developer">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">support@yandex.ru</string>
    <string name="songs_list">Best Songs Ever</string>
    <string name="year">2022</string>
</resources>