<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/blue"
    android:padding="16dp">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size" />


    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:icon="@drawable/search_button"
        app:iconTint="@color/black"
        app:iconGravity="textStart"
        android:gravity="center"
        android:text="@string/search"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"
        app:cornerRadius="16dp"/>


    <Button
        android:id="@+id/btnMedia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:icon="@drawable/mediateka"
        app:iconTint="@color/black"
        app:iconGravity="textStart"
        android:gravity="center"
        android:text="@string/media"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"
        app:cornerRadius="16dp"/>


    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        android:gravity="center"
        app:iconTint="@color/black"
        android:text="@string/settings"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/black"
        app:cornerRadius="16dp"/>

</LinearLayout>
